--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,12 @@
 }
 body {
   font-family: 'Bellota', cursive;
+  background-color: #000;
+  color: #fff;
+}
+html{
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar{
+  display: none;
 }
