--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Bellota:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bellota:wght@300;400;700&family=Source+Serif+Pro:wght@600;700&display=swap');
+
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -7,6 +9,8 @@
   text-align: none;
 }
 body {
+  position: relative;
+  font-family: 'Source Serif Pro', serif;
   font-family: 'Bellota', cursive;
   background-color: #000;
   color: #fff;
