--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;600&display=swap');
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -8,13 +9,13 @@
 }
 body {
   position: relative;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Crimson Text', serif;
   background-color: #000;
   color: #fff;
 }
-html{
+html {
   scroll-behavior: smooth;
 }
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   display: none;
 }
